--- a/app/src/main/res/layout/listitemproyek.xml
+++ b/app/src/main/res/layout/listitemproyek.xml
@@ -89,7 +89,7 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
