--- a/app/src/main/res/layout/activity_perhitunganlantai.xml
+++ b/app/src/main/res/layout/activity_perhitunganlantai.xml
@@ -216,7 +216,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <include layout="@layout/content_main" />
+            <include layout="@layout/contenlantai" />
         </LinearLayout>
 
     </ScrollView>
