--- a/app/src/main/res/layout/activity_tambahlantai.xml
+++ b/app/src/main/res/layout/activity_tambahlantai.xml
@@ -106,10 +106,10 @@
                             android:layout_height="wrap_content">
 
                             <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/tinggib"
+                                android:id="@+id/lebarb"
                                 android:layout_width="125dp"
                                 android:layout_height="wrap_content"
-                                android:hint="Tinggi"
+                                android:hint="Lebar"
                                 android:inputType="number|numberDecimal"
                                 android:paddingBottom="16dp" />
 
@@ -128,99 +128,6 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/textView9"
-                            android:layout_width="173dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0"
-                            android:text="isi data daur pintu"
-                            android:textColor="#FA575656" />
-
-                        <TextView
-                            android:id="@+id/textView11"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="isi data daur jendela"
-                            android:textColor="#FA575656" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <com.google.android.material.textfield.TextInputLayout
-                            style="@style/Theme.AppCompat.Light.DarkActionBar"
-                            android:layout_width="74dp"
-                            android:layout_height="match_parent">
-
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/ppintu"
-                                android:layout_width="68dp"
-                                android:layout_height="wrap_content"
-                                android:hint="Panjang"
-                                android:inputType="textLongMessage|textEmailAddress"
-                                android:paddingBottom="16dp"
-                                android:text="0" />
-
-                        </com.google.android.material.textfield.TextInputLayout>
-
-                        <com.google.android.material.textfield.TextInputLayout
-                            style="@style/Theme.AppCompat.Light.DarkActionBar"
-                            android:layout_width="99dp"
-                            android:layout_height="match_parent">
-
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/tpintu"
-                                android:layout_width="79dp"
-                                android:layout_height="wrap_content"
-                                android:hint="Tinggi"
-                                android:inputType="textEmailAddress"
-                                android:paddingBottom="16dp"
-                                android:text="0" />
-
-                        </com.google.android.material.textfield.TextInputLayout>
-
-                        <com.google.android.material.textfield.TextInputLayout
-                            style="@style/Theme.AppCompat.Light.DarkActionBar"
-                            android:layout_width="102dp"
-                            android:layout_height="wrap_content">
-
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/panjangj"
-                                android:layout_width="90dp"
-                                android:layout_height="wrap_content"
-                                android:hint="Panjang"
-                                android:inputType="textEmailAddress"
-                                android:paddingBottom="16dp"
-                                android:text="0" />
-
-                        </com.google.android.material.textfield.TextInputLayout>
-
-                        <com.google.android.material.textfield.TextInputLayout
-                            style="@style/Theme.AppCompat.Light.DarkActionBar"
-                            android:layout_width="85dp"
-                            android:layout_height="wrap_content">
-
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/tinggij"
-                                android:layout_width="77dp"
-                                android:layout_height="wrap_content"
-                                android:hint="Tinggi"
-                                android:inputType="textLongMessage|textEmailAddress"
-                                android:paddingBottom="16dp"
-                                android:text="0" />
-
-                        </com.google.android.material.textfield.TextInputLayout>
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="0"
                         android:orientation="horizontal">
@@ -234,7 +141,7 @@
                                 android:id="@+id/luasbidang"
                                 android:layout_width="137dp"
                                 android:layout_height="wrap_content"
-                                android:hint="Luas bidang"
+                                android:hint="Luas lantai"
                                 android:inputType="text"
                                 android:paddingBottom="16dp" />
 
@@ -272,7 +179,7 @@
                             android:layout_width="270dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="Pilih batako/bata"
+                            android:text="Pilih Keramik"
                             android:textColor="#FA575656" />
 
                         <LinearLayout
@@ -282,7 +189,7 @@
                             android:orientation="vertical">
 
                             <Spinner
-                                android:id="@+id/spinbata"
+                                android:id="@+id/spinkeramik"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -359,6 +266,60 @@
                                     android:id="@+id/hargasemen"
                                     android:layout_width="215dp"
                                     android:layout_height="wrap_content"
+                                    android:hint="Rp."
+                                    android:inputType="text"
+                                    android:paddingBottom="16dp" />
+
+                            </com.google.android.material.textfield.TextInputLayout>
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/semennat"
+                            android:layout_width="270dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Pilih Semennat"
+                            android:textColor="#FA575656" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <Spinner
+                                android:id="@+id/semennatpilih"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:textColor="#FA575656" />
+
+                            <TextView
+                                android:id="@+id/yss"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:textColor="#FA575656" />
+
+                            <com.google.android.material.textfield.TextInputLayout
+                                style="@style/Theme.AppCompat.Light.DarkActionBar"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1">
+
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/hsemenat"
+                                    android:layout_width="215dp"
+                                    android:layout_height="wrap_content"
+                                    android:enabled="true"
                                     android:hint="Rp."
                                     android:inputType="text"
                                     android:paddingBottom="16dp" />
@@ -479,6 +440,7 @@
                     </LinearLayout>
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
+
         </LinearLayout>
     </LinearLayout>
 
