--- a/app/src/main/res/layout/hasil_lantai.xml
+++ b/app/src/main/res/layout/hasil_lantai.xml
@@ -3,4 +3,324 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="#FFAB40"
+        android:text="Jumlah Material yang Dibutuhkan Beserta Perkiraan Biayanya:"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="15sp"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="12dp">
+
+        <TextView
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:text="Luas lantai anda : "
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilbid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="20000"
+            android:textAlignment="textStart"
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilb6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="5dp"
+            android:text="m2"
+            android:textAlignment="textStart"
+            android:textColor="#FA575656" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="5dp">
+
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Semen : "
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasils"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="300"
+            android:textAlignment="textStart"
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilb4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="5dp"
+            android:text="kg,"
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilb13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="5dp"
+            android:text="atau"
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasils1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="5dp"
+            android:text="300"
+            android:textAlignment="textStart"
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilb14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="5dp"
+            android:text="sak,"
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilb16"
+            android:layout_width="31dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Rp."
+            android:textAlignment="textEnd"
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasils2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="300"
+            android:textColor="#FA575656" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="5dp">
+
+        <TextView
+            android:id="@+id/hasilb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pasir : "
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilp2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="300"
+            android:textAlignment="textStart"
+            android:textColor="#FA575656" />
+
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:text="m3, "
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilb12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="5dp"
+            android:text="atau"
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="5dp"
+            android:text="200"
+            android:textAlignment="textStart"
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilb8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="5dp"
+            android:text="colt"
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilb9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="10dp"
+            android:text="Rp."
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilp1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="300"
+            android:textAlignment="textStart"
+            android:textColor="#FA575656" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="5dp">
+
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Keramik : "
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilbat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="300"
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilb5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="5dp"
+            android:text="bh"
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilb18"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="5dp"
+            android:text="Rp."
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilbat1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="300"
+            android:textColor="#FA575656" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="5dp">
+
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SemenNat : "
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilnat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="300"
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilbnat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:paddingLeft="5dp"
+            android:text="kg"
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilb1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:paddingLeft="5dp"
+            android:text="Rp."
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/hasilnat1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="300"
+            android:textColor="#FA575656" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="5dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total Biaya : "
+            android:textColor="#FA575656" />
+
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:text="Rp."
+            android:textAlignment="textStart"
+            android:textColor="#FA575656" />
+
+        <TextView
+            android:id="@+id/total"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="3000000"
+            android:textAlignment="textStart"
+            android:textColor="#FA575656" />
+
+    </LinearLayout>
+
 </LinearLayout>
