--- a/app/src/main/res/layout/listitemproyek.xml
+++ b/app/src/main/res/layout/listitemproyek.xml
@@ -149,6 +149,7 @@
                         app:srcCompat="@drawable/ic_delete_white_24dp" />
 
                     <TextView
+                        android:id="@+id/hapusproyek"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
