--- a/app/src/main/res/layout/activity_tambahurugan.xml
+++ b/app/src/main/res/layout/activity_tambahurugan.xml
@@ -238,7 +238,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:enabled="false">
+                    android:enabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/hargaurug"
