--- a/app/src/main/res/layout/activity_tambahplesteran.xml
+++ b/app/src/main/res/layout/activity_tambahplesteran.xml
@@ -267,7 +267,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:enabled="false">
+                    android:enabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/hargasemen"
@@ -325,7 +325,7 @@
                         android:id="@+id/hargapasir"
                         android:layout_width="215dp"
                         android:layout_height="wrap_content"
-                        android:enabled="false"
+                        android:enabled="true"
                         android:hint="Rp."
                         android:inputType="text"
                         android:paddingBottom="16dp" />
