--- a/app/src/main/res/layout/delete_dialog.xml
+++ b/app/src/main/res/layout/delete_dialog.xml
@@ -9,14 +9,14 @@
     >
 
     <ImageView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:src="@drawable/ic_close_black_24dp"
-    android:layout_marginTop="7dp"
-    android:layout_marginRight="7dp"
-    android:elevation="5dp"
+        android:id="@+id/exit1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-    />
+        android:layout_marginTop="7dp"
+        android:layout_marginRight="7dp"
+        android:elevation="5dp"
+        android:src="@drawable/ic_close_black_24dp" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
