--- a/app/src/main/res/layout/detail_bidang.xml
+++ b/app/src/main/res/layout/detail_bidang.xml
@@ -7,15 +7,16 @@
     android:layout_marginLeft="2dp"
     android:layout_marginRight="2dp"
     >
+
     <ImageView
+        android:id="@+id/exit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_close_black_24dp"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="7dp"
         android:layout_marginRight="7dp"
         android:elevation="5dp"
-        android:layout_alignParentRight="true"
-        />
+        android:src="@drawable/ic_close_black_24dp" />
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
