--- a/app/src/main/res/layout/listacian.xml
+++ b/app/src/main/res/layout/listacian.xml
@@ -99,6 +99,28 @@
                                 android:text="Semen"
                                 android:textColor="#FF292929" />
                         </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textViewdd23"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0"
+                                android:text="Harga total : "
+                                android:textColor="#FF292929"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/detailtotal"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Semen"
+                                android:textColor="#FF292929"
+                                android:textStyle="bold" />
+                        </LinearLayout>
 
                     </LinearLayout>
 
