--- a/app/src/main/res/layout/listlantai.xml
+++ b/app/src/main/res/layout/listlantai.xml
@@ -72,52 +72,24 @@
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
                                 android:layout_weight="0"
-                                app:srcCompat="@drawable/ikon_batako" />
+                                app:srcCompat="@drawable/lantai" />
 
                             <TextView
                                 android:id="@+id/textView18"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0"
-                                android:text="Batako : "
+                                android:text="Keramik : "
                                 android:textColor="#FF292929" />
 
                             <TextView
-                                android:id="@+id/Batako"
+                                android:id="@+id/keramik"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Batako"
                                 android:textColor="#FF292929" />
                         </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:id="@+id/imageView2"
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:layout_weight="0"
-                                app:srcCompat="@drawable/ikon_pasir" />
-
-                            <TextView
-                                android:id="@+id/textView3"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="0"
-                                android:text="Pasir : "
-                                android:textColor="#FF292929" />
-
-                            <TextView
-                                android:id="@+id/pasir"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Pasir"
-                                android:textColor="#FF292929" />
-
-                        </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -145,6 +117,28 @@
                                 android:layout_height="wrap_content"
                                 android:text="Semen"
                                 android:textColor="#FF292929" />
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textViewdd23"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0"
+                                android:text="Harga total : "
+                                android:textColor="#FF292929"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/detailtotal"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Semen"
+                                android:textColor="#FF292929"
+                                android:textStyle="bold" />
                         </LinearLayout>
 
                     </LinearLayout>
