--- a/app/src/main/res/layout/listpengecatan.xml
+++ b/app/src/main/res/layout/listpengecatan.xml
@@ -72,18 +72,18 @@
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
                                 android:layout_weight="0"
-                                app:srcCompat="@drawable/ikon_batako" />
+                                app:srcCompat="@drawable/ikon_cat" />
 
                             <TextView
                                 android:id="@+id/textView18"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0"
-                                android:text="Batako : "
+                                android:text="Cat : "
                                 android:textColor="#FF292929" />
 
                             <TextView
-                                android:id="@+id/Batako"
+                                android:id="@+id/cat"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Batako"
@@ -100,18 +100,18 @@
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
                                 android:layout_weight="0"
-                                app:srcCompat="@drawable/ikon_pasir" />
+                                app:srcCompat="@drawable/ikon_semen" />
 
                             <TextView
                                 android:id="@+id/textView3"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0"
-                                android:text="Pasir : "
+                                android:text="Plamur : "
                                 android:textColor="#FF292929" />
 
                             <TextView
-                                android:id="@+id/pasir"
+                                android:id="@+id/plamur"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Pasir"
@@ -120,31 +120,26 @@
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
                             android:orientation="horizontal">
 
-                            <ImageView
-                                android:id="@+id/imageView7"
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:layout_weight="1"
-                                app:srcCompat="@drawable/ikon_semen" />
-
                             <TextView
-                                android:id="@+id/textView23"
+                                android:id="@+id/textViewdd23"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="Semen : "
-                                android:textColor="#FF292929" />
+                                android:layout_weight="0"
+                                android:text="Harga total : "
+                                android:textColor="#FF292929"
+                                android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/semen"
-                                android:layout_width="match_parent"
+                                android:id="@+id/detailtotal"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Semen"
-                                android:textColor="#FF292929" />
+                                android:textColor="#FF292929"
+                                android:textStyle="bold" />
                         </LinearLayout>
 
                     </LinearLayout>
