--- a/app/src/main/res/layout/listpondasi.xml
+++ b/app/src/main/res/layout/listpondasi.xml
@@ -123,7 +123,28 @@
                                 android:text="Semen"
                                 android:textColor="#FF292929" />
                         </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
 
+                            <TextView
+                                android:id="@+id/textViewdd23"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0"
+                                android:text="Harga total : "
+                                android:textColor="#FF292929"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/detailtotal"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Semen"
+                                android:textColor="#FF292929"
+                                android:textStyle="bold" />
+                        </LinearLayout>
                     </LinearLayout>
 
                 </LinearLayout>
@@ -143,7 +164,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/detailbidang"
+                    android:id="@+id/detailpondasi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0"
@@ -152,7 +173,7 @@
                     android:textColor="#40C4FF" />
 
                 <Button
-                    android:id="@+id/editbidang"
+                    android:id="@+id/editpondasi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0"
@@ -161,7 +182,7 @@
                     android:textColor="#66B30B" />
 
                 <Button
-                    android:id="@+id/Deletebidang"
+                    android:id="@+id/Deletepondasi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0"
