--- a/app/src/main/res/layout/listurugan.xml
+++ b/app/src/main/res/layout/listurugan.xml
@@ -65,30 +65,7 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:id="@+id/imageView6"
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:layout_weight="0"
-                                app:srcCompat="@drawable/ikon_batako" />
-
-                            <TextView
-                                android:id="@+id/textView18"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="0"
-                                android:text="Batako : "
-                                android:textColor="#FF292929" />
-
-                            <TextView
-                                android:id="@+id/Batako"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Batako"
-                                android:textColor="#FF292929" />
-                        </LinearLayout>
+                            android:orientation="horizontal"/>
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -107,7 +84,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0"
-                                android:text="Pasir : "
+                                android:text="Pasir urugan : "
                                 android:textColor="#FF292929" />
 
                             <TextView
@@ -118,34 +95,33 @@
                                 android:textColor="#FF292929" />
 
                         </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textViewdd23"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0"
+                                android:text="Harga total : "
+                                android:textColor="#FF292929"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/detailtotal"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Semen"
+                                android:textColor="#FF292929"
+                                android:textStyle="bold" />
+                        </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:id="@+id/imageView7"
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:layout_weight="1"
-                                app:srcCompat="@drawable/ikon_semen" />
-
-                            <TextView
-                                android:id="@+id/textView23"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="Semen : "
-                                android:textColor="#FF292929" />
-
-                            <TextView
-                                android:id="@+id/semen"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="Semen"
-                                android:textColor="#FF292929" />
-                        </LinearLayout>
+                            android:orientation="horizontal"/>
 
                     </LinearLayout>
 
